--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capital City Quiz</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body id="app">
